--- a/styles.css
+++ b/styles.css
@@ -1062,17 +1062,11 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 
     
 
-/* Mobile-Friendly Navbar */
+
 @media screen and (max-width: 768px) {
     .navbar {
         flex-direction: column;
         align-items: center;
-        padding: 10px;
-    }
-    
-    .nav-left {
-        width: 100%;
-        justify-content: space-between;
     }
 
     .nav-links {
@@ -1082,21 +1076,22 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
         text-align: center;
         background-color: #2b2b3c;
         border-radius: 10px;
+        margin-top: 10px;
     }
-    
+
     .nav-links.active {
         display: flex;
     }
-    
+
     .nav-links li {
-        padding: 10px;
+        padding: 10px 0;
     }
 
     .menu-toggle {
         display: block;
-        cursor: pointer;
         font-size: 24px;
         color: #fff;
+        cursor: pointer;
     }
 }
 
